# openarchieven-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  homebrew.yml  openapi-refresh.yml  release.yml
openapi/: openarchieven.sha256  openarchieven.yaml  params-manifest.json
openarchieven/: __init__.py
scripts/: refresh-openapi.py  render-homebrew-formula.sh
src/: cache.rs  cli.rs  client.rs  entry.rs  error.rs  lib.rs  main.rs  output.rs  runtime.rs  schema_cmd.rs  tty.rs
src/commands/: archives.rs  births.rs  cache_cmd.rs  census.rs  deaths.rs  event_records.rs  marriages.rs  match_record.rs  mod.rs  search.rs  show.rs  weather.rs  yearsago.rs
src/commands/stats/: archive_stat.rs  breakdown.rs  comments.rs  events.rs  familynames.rs  firstnames.rs  mod.rs  professions.rs  records.rs  sources.rs
src/commands/transcripts/: browse.rs  mod.rs  search.rs  show.rs
tests/: archives.rs  cache_cmd.rs  census.rs  cli_dispatch.rs  cli_smoke.rs  client_cache.rs  client_http.rs  client_retry.rs  event_records.rs  match.rs  openapi_contract.rs  schema.rs  search.rs  show.rs  stats_archive.rs  stats_breakdown.rs  stats_familynames.rs  stats_firstnames.rs  stats_professions.rs  transcripts_browse.rs  transcripts_search.rs  transcripts_show.rs  weather.rs  yearsago.rs
tests/snapshots/: schema__schema_is_byte_stable.snap
