[package]
name = "openarchieven"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "CLI for the Open Archives Dutch genealogical API"
license = "MIT"
repository = "https://github.com/rvben/openarchieven"
readme = "README.md"
keywords = ["genealogy", "openarchieven", "cli", "agent-friendly"]
categories = ["command-line-utilities"]

[[bin]]
name = "openarchieven"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
directories = "5"
fs4 = "0.9"
governor = "0.7"
humantime = "2"
nonzero_ext = "0.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
url = "2"
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["json", "redactions"] }
predicates = "3"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
