[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "openarchieven"
dynamic = ["version"]
description = "CLI for the Open Archives Dutch genealogical API"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Ruben Jongejan", email = "ruben.jongejan@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Sociology :: Genealogy",
]
keywords = ["genealogy", "openarchieven", "cli", "agent-friendly"]
dependencies = []

[project.urls]
Homepage = "https://github.com/rvben/openarchieven-cli"
Repository = "https://github.com/rvben/openarchieven-cli.git"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
python-packages = ["openarchieven"]
strip = true
